docs/3.0rc/manage/cloud/manage-users/api-keys.mdx
---
title: Manage Prefect Cloud API keys
description: Create an API key to access Prefect Cloud from a local execution environment.
---

API keys enable you to authenticate a local environment to work with Prefect Cloud.

If you run `prefect cloud login` from your CLI, you can authenticate through your browser or by pasting an API key.

Authenticating through the browser directs you to an authorization page.
After you grant approval to connect, you're redirected to the CLI and the API key is saved to your local 
[Prefect profile](/3.0rc/manage/settings-and-profiles/).

If you choose to authenticate by pasting an API key, you must create an API key in the Prefect Cloud UI first.

## Create an API key

1. Select the account icon at the bottom-left corner of the UI.
2. Select **API Keys**.
The page displays a list of previously generated keys, and allows you to create or delete API keys.

![Viewing and editing API keys in the Cloud UI.](/3.0rc/img/ui/cloud-api-keys.png)

3. Select the **+** button to create a new API key.
Provide a name for the key and an expiration date.

![Creating an API key in the Cloud UI.](/3.0rc/img/ui/cloud-new-api-key.png)

<Warning>
Copy the key to a secure location since an API key cannot be revealed again in the UI after it is generated. 
</Warning>

## Log into Prefect Cloud with an API Key

<div class="terminal">
```bash
prefect cloud login -k '<my-api-key>'
```
</div>

## Service account API keys (Pro) (Enterprise)

Service accounts are a feature of Prefect Cloud [Pro and Enterprise tier plans](https://www.prefect.io/pricing) that enable you to 
create a Prefect Cloud API key that is not associated with a user account.

Service accounts are useful for configuring API access for running workers, or executing flow runs on remote infrastructure. 
Events and logs for flow runs in those environments are associated with the service account rather than a user. Manage or revoke API access by  
configuring or removing the service account without disrupting user access.

See [service accounts](/3.0rc/manage/cloud/manage-users/service-accounts/) for more information.
